# fdre-model

./: .ebignore  .env.example  .gitignore  Procfile  README.md  application.py  progress.md  pyproject.toml  requirements.txt
.platform/hooks/predeploy/: 01_prepare_workspace.sh
config/: project.yaml
docs/: architecture.md  e2e_gap_analysis_2026-05-16.md  end_to_end_records.md
fdre_model/: __init__.py  config.py  exports.py
fdre_model/market/: __init__.py  aggregation.py  engine.py  metrics.py  models.py  registry.py  rules.py
fdre_model/sample_data/: __init__.py  bess_state_2026_hourly.csv  metadata.json  peak_schedule_2026_hourly.csv  solar_2026_hourly.csv  t2_pricing_2026_hourly.csv  wind_2026_hourly.csv
fdre_model/storage/: __init__.py  hosted.py  local.py  scope.py
fdre_model/web/: __init__.py  app.py  auth.py  auth0_management.py
fdre_model/web/static/: app-ui.js  app.css  syncfusion-tables.js
fdre_model/web/templates/: assumptions.html  base.html  feeds.html  history.html  input_edit.html  inputs.html  live_board.html  portfolio.html  rules.html  unauthorized.html  users.html
fdre_model/web/templates/components/: collapsible.html  icons.html
tests/: test_aggregation.py  test_auth.py  test_hosted.py  test_metrics.py  test_registry.py  test_rules.py  test_storage.py  test_web.py
tools/: build_sample_data.py
