[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdre-market-model"
version = "0.1.0"
description = "Live-ready FDRE market operations advisory system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "authlib>=1.3.0",
  "Flask>=3.0.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
  "requests>=2.31.0",
  "xlsxwriter>=3.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
aws = [
  "boto3>=1.34.0",
]

[project.scripts]
fdre-market-web = "fdre_model.web.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["fdre_model*"]

[tool.setuptools.package-data]
"fdre_model" = [
  "web/templates/*.html",
  "web/static/*.css",
  "sample_data/*.csv",
  "sample_data/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
